--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
     "start": "cross-env NODE_ENV=production remix-serve build"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.5",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
     "@remix-run/react": "^1.2.2",
     "@remix-run/serve": "^1.2.2",
     "cross-env": "^7.0.3",
+    "framer-motion": "^6.2.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.2.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.2.2",
+    "@types/prettier": "^2.4.4",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "prettier": "^2.5.1",
     "typescript": "^4.5.5"
   },
   "engines": {
