--- a/fly.toml
+++ b/fly.toml
@@ -1,40 +1,22 @@
-# fly.toml file generated for bracketology on 2022-02-26T15:19:00-05:00
+# fly.toml app configuration file generated for bracketology on 2024-03-07T21:46:48-05:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-app = "bracketology"
+app = 'bracketology'
+primary_region = 'bos'
 
-kill_signal = "SIGINT"
-kill_timeout = 5
-processes = []
+[build]
 
-[env]
-  PORT = "8080"
+[http_service]
+  internal_port = 3000
+  force_https = true
+  auto_stop_machines = true
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
-[experimental]
-  allowed_public_ports = []
-  auto_rollback = true
-
-[[services]]
-  http_checks = []
-  internal_port = 8080
-  processes = ["app"]
-  protocol = "tcp"
-  script_checks = []
-
-  [services.concurrency]
-    hard_limit = 25
-    soft_limit = 20
-    type = "connections"
-
-  [[services.ports]]
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
-
-  [[services.tcp_checks]]
-    grace_period = "1s"
-    interval = "15s"
-    restart_limit = 0
-    timeout = "2s"
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
