--- a/package.json
+++ b/package.json
@@ -1,44 +1,56 @@
 {
-  "name": "remix-app-template",
+  "name": "bracketolegy",
   "private": true,
-  "description": "",
-  "license": "",
   "sideEffects": false,
+  "type": "module",
   "scripts": {
-    "build": "cross-env NODE_ENV=production remix build",
+    "build": "remix build",
     "deploy": "fly deploy --remote-only",
-    "dev": "dotenv cross-env NODE_ENV=development remix dev",
-    "postinstall": "remix setup node",
-    "start": "cross-env NODE_ENV=production remix-serve build"
+    "dev": "remix dev",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "start": "remix-serve ./build/index.js",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.8.5",
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "@fortawesome/react-fontawesome": "^0.1.17",
-    "@remix-run/react": "^1.2.2",
-    "@remix-run/serve": "^1.2.2",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11",
+    "@emotion/server": "^11",
+    "@emotion/styled": "^11",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@remix-run/css-bundle": "^2.8.1",
+    "@remix-run/node": "^2.8.1",
+    "@remix-run/react": "^2.8.1",
+    "@remix-run/serve": "^2.8.1",
     "@supabase/supabase-js": "^1.30.7",
     "cross-env": "^7.0.3",
-    "framer-motion": "^6.2.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-select": "^5.3.0",
-    "remix": "^1.2.2"
+    "framer-motion": "^6",
+    "isbot": "^4.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.2.2",
-    "@types/prettier": "^2.4.4",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
-    "dotenv": "^16.0.0",
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "@flydotio/dockerfile": "^0.5.2",
+    "@remix-run/dev": "^2.8.1",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "dotenv": "^16.4.5",
+    "eslint": "^8.38.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.2.5",
+    "typescript": "^5.1.6"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=18.0.0"
   }
 }
